<resources>
    <string name="app_name">Gym Assistant</string>
    <string name="app_name_gym">Gym</string>
    <string name="app_name_assistant">Assistant</string>

    <string name="filter">Filter</string>
    <string name="reset_the_date">Reset the Date</string>
    <string name="change_training">Change training</string>
    <string name="stopwatch">Stopwatch</string>
    <string name="sort">Sort by</string>
    <string name="delete_all">Delete all</string>
    <string name="delete_training">Delete training</string>
    <string name="add_training">Dodaj szablon</string>
    <string name="welcome">WELCOME</string>
    <string name="exercise">Exercise</string>
    <string name="change_mode">Change mode</string>
    <string name="weight">Weight</string>
    <string name="reps">Reps</string>
    <string name="finished">Finished</string>
    <string name="communique_no_trainings">No trainings. Create one!</string>
    <string name="choose_training">Choose training</string>
    <string name="new_training">New training</string>
    <string-array name="add_training_create_name">
        <item>Date</item>
        <item>Name</item>
    </string-array>
    <string name="what_training_name_question">A title of training</string>
    <string name="training">Trenuj</string>
    <string name="round_number">Round number</string>
    <string name="repetition">Repetition</string>
    <string name="choose_day">Choose day</string>
    <string name="short_monday">Mon</string>
    <string name="short_tuesday">Tue</string>
    <string name="short_wednesday">Wed</string>
    <string name="short_Thursday">Thu</string>
    <string name="short_friday">Fri</string>
    <string name="short_saturday">Sat</string>
    <string name="short_Sunday">Sun</string>
    <string name="rounds_number">Rounds number</string>
    <string name="set_name">Set Name</string>
    <string name="add_module">Add module</string>
    <string name="round">Round</string>
    <string name="toast_add_training_training_exist">The training with that name already exists. Change it.</string>
    <string-array name="statistics_show_mode">
        <item>Show trainings</item>
        <item>Show exercise</item>
    </string-array>
    <string-array name="week_days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string-array name="month">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="no_trainings">There is no training</string>
    <string name="view_mode">View mode</string>
    <string name="number_of_exercises">Number of exercises</string>
    <!-- przetłumaczyć-->
    <string-array name="timetable_view_mode">
        <item>Sortowanie alfabetyczne</item>
        <item>Sortowanie Chronologiczne</item>
        <item>Lista tygodniowa</item>
        <item>Lista Miesięczna</item>
    </string-array>

    <string-array name="training_mode_choose">
        <item>Series</item>
        <item>Station</item>
        <item>Module</item>
    </string-array>
    <string-array name="set_round_number">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="repetition">
        <item>One week</item>
        <item>Two weeks</item>
        <item>One mouth</item>
        <item>X days</item>
    </string-array>
    <string-array name="number_of_days">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
    </string-array>
    <string-array name="short_week_days">
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
        <item>Sun</item>
    </string-array>

    <string name="settings">Settings</string>
    <string name="training_mode">Choose start mode</string>
    <string name="in_training_showing">In training in round displays</string>
    <string name="title_shared_preferences_settings">values_layout_settings</string>
    <!--<string name="settings_start_mode_title"></string>-->
    <string name="start_mode_summary">Define what start button (dumbbell) should do</string>
    <string name="key_start_mode_preferences">start_mode_preferences</string>
    <string name="key_what_display_on_exercise_round">what_display_on_exercise_round</string>
    <string name="displaying_tips">Displaying tips</string>
    <string name="displaying_tips_summary">In exercise define which text should appear as tip</string>
    <string name="language">Language</string>
    <string name="choose_language">Choose language</string>

    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>


    <string-array name="training_mode_spinner">
        <item>Select nearest training</item>
        <item>Ask for training</item>
    </string-array>
    <string-array name="in_training_showing_array">
        <item>Names of attributes</item>
        <item>Default values</item>
        <item>Values from last training</item>
    </string-array>
    <string-array name="start_mode_dialog">
        <item>Open nearest training</item>
        <item>Ask which training to start</item> <!--rename-->
    </string-array>
    <string-array name="what_display_on_exercise_round">
        <item>Names of fields</item>
        <item>Default values</item>
        <item>Values from last training</item>
        <item>Drop set</item>
    </string-array>


    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for DB & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_add_training">AddTraining</string>
    <string name="title_activity_add_training_settings">AddTrainingSettings</string>
    <string name="title_activity_start_training">StartTraining</string>
    <string name="home">Home</string>
    <string name="show_training">Zaplanuj</string>
    <string name="first_and_last_name">Danny Boar</string>
    <string name="use_existing_exercise">Use existing exercise</string>
    <string name="modify">modify</string>
    <string name="is_first_run">First run</string>
    <string name="options">Opcje</string>
    <string name="new_schema">Nowy schemat</string>
    <string name="parse_file">Rzutuj</string>
    <string name="send_match">Send Match</string>
</resources>
