<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_add_training_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        >

    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="30dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/round_number"
            android:textColor="#000000"
            android:textAlignment="center"
            android:textSize="30dp" />

        <Spinner
            android:id="@+id/round_number_spinner"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_weight="1.00"
            android:drawSelectorOnTop="true"
            android:entries="@array/set_round_number"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:textColor="#000000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="30dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/training_mode"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textAlignment="center"
            android:textSize="30dp"/>

        <Spinner
            android:id="@+id/training_mode_spinner"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:drawSelectorOnTop="true"
            android:entries="@array/training_mode_choose"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="#000000"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="30dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#000000"
            android:gravity="center_vertical"
            android:textAlignment="center"
            android:text="@string/repetition"
            android:textSize="30dp"/>

        <Spinner
            android:id="@+id/repetition_slider"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:drawSelectorOnTop="true"
            android:entries="@array/repetition"
            android:textAlignment="center"
            android:textColor="#000000" />

        <Spinner
            android:id="@+id/slider_repetition_2"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0"
            android:drawSelectorOnTop="true"
            android:entries="@array/number_of_days"
            android:textAlignment="center"
            android:textColor="#000000" />
    </LinearLayout>
    <CalendarView
        android:id="@+id/calendar_view"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:visibility="gone">
    </CalendarView>
    <TextView
        android:id="@+id/choose_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_day"
        android:textColor="#000000"
        android:gravity="center_vertical"
        android:textAlignment="center"
        android:textSize="20dp" />



    <LinearLayout
        android:id="@+id/week_days_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/mon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/week_days_text_size"
            android:text="@string/short_monday"
            android:background="@drawable/button_week_days" />

        <Button
            android:id="@+id/tue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/short_tuesday"
            android:textSize="@dimen/week_days_text_size"
            android:background="@drawable/button_week_days"/>

        <Button
            android:id="@+id/wed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/short_wednesday"
            android:textSize="@dimen/week_days_text_size"
            android:background="@drawable/button_week_days"/>

        <Button
            android:id="@+id/thu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:layout_margin="0dp"
            android:text="@string/short_Thursday"
            android:textSize="@dimen/week_days_text_size"
            android:background="@drawable/button_week_days"/>

        <Button
            android:id="@+id/fri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/short_friday"
            android:textSize="@dimen/week_days_text_size"
            android:background="@drawable/button_week_days"/>

        <Button
            android:id="@+id/sat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/short_saturday"
            android:textSize="@dimen/week_days_text_size"
            android:background="@drawable/button_week_days"/>

        <Button
            android:id="@+id/sun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/short_Sunday"
            android:textSize="@dimen/week_days_text_size"
            android:background="@drawable/button_week_days"/>
    </LinearLayout>

</LinearLayout>