<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <TextView
        android:id="@+id/round_number_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:inputType="textMultiLine"
        android:text="         "
        android:textColor="#000000"
        android:textSize="10dp" />

    <TextView
        android:id="@+id/round_number_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:gravity="center_horizontal"
        android:textSize="12dp"
        android:layout_weight="1"
        android:text="@string/round"
        android:inputType="none"
        />
    <TextView
        android:id="@+id/weight_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:inputType="textMultiLine"
        android:text="@string/weight"
        android:textColor="#000000"
        android:textSize="12dp"

        />
    <EditText
        android:id="@+id/weight_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:gravity="center_horizontal"
        android:textSize="12dp"
        android:layout_weight="1"
        android:inputType="numberDecimal"
        />

    <TextView
        android:id="@+id/reps_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:inputType="textMultiLine"
        android:text="@string/reps"
        android:textColor="#000000"
        android:textSize="12dp" />

    <EditText
        android:id="@+id/reps_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:gravity="center_horizontal"
        android:textSize="12dp"
        android:inputType="number"
        android:layout_weight="1"
        />
</LinearLayout>